test/TinySwift/reject/async-await.swift
// RUN: %target-swift-frontend -typecheck -verify -enable-experimental-feature TinySwift -disable-objc-interop -parse-stdlib %s
// REQUIRES: swift_feature_TinySwift

func doWork() async {} // expected-error {{concurrency is not supported in TinySwift}}
